sumo/tests/sumo/extended/vaporizer/errors/end_missing/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Attribute 'end' is missing in definition of a vaporizer.
Quitting (on error).
